Opened 11 years ago
Closed 11 years ago
#4725 closed defect (fixed)
Probing regression with h264 in mkv
| Reported by: | Carl Eugen Hoyos | Owned by: | |
|---|---|---|---|
| Priority: | important | Component: | undetermined |
| Version: | git-master | Keywords: | h264 mkv regression |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
http://thread.gmane.org/gmane.comp.video.ffmpeg.user/57983
A user uploaded a mkv file containing 10bit h264 video that is not successfully probed without increased -analyzeduration since a57ece0c
$ ffmpeg -i h264_pixfmt_matroska.mkv
ffmpeg version N-73667-g99b0cad Copyright (c) 2000-2015 the FFmpeg developers
built with gcc 4.7 (SUSE Linux)
configuration: --enable-gpl
libavutil 54. 28.100 / 54. 28.100
libavcodec 56. 48.100 / 56. 48.100
libavformat 56. 40.100 / 56. 40.100
libavdevice 56. 4.100 / 56. 4.100
libavfilter 5. 21.100 / 5. 21.100
libswscale 3. 1.101 / 3. 1.101
libswresample 1. 2.100 / 1. 2.100
libpostproc 53. 3.100 / 53. 3.100
[matroska,webm @ 0x1c2c3e0] Could not find codec parameters for stream 0 (Video: h264, none, 1920x1080): unspecified pixel format
Consider increasing the value for the 'analyzeduration' and 'probesize' options
Input #0, matroska,webm, from 'h264_pixfmt_matroska.mkv':
Metadata:
title : Fate/Zero BD - Creditless ED1: Aoi Eir / Memoria
encoder : libebml v1.2.2 + libmatroska v1.3.0
creation_time : 2012-04-05 12:28:42
Duration: 00:01:30.05, start: 0.000000, bitrate: 1819 kb/s
Stream #0:0(jpn): Video: h264, none, 1920x1080, SAR 1:1 DAR 16:9, 23.98 fps, 23.98 tbr, 1k tbn, 2k tbc (default)
Metadata:
title : H.264 1080p BD
Stream #0:1(jpn): Audio: flac, 48000 Hz, stereo, s32 (24 bit) (default)
Metadata:
title : FLAC 2.0 24-bit
Stream #0:2(eng): Subtitle: ass (default)
Metadata:
title : Styled Subtitles
Stream #0:3: Attachment: ttf
Metadata:
filename : FOT-MatisseMinoriPro-B-En.ttf
mimetype : application/x-truetype-font
At least one output file must be specified
Change History (2)
comment:1 by , 11 years ago
comment:2 by , 11 years ago
| Reproduced by developer: | set |
|---|---|
| Resolution: | → fixed |
| Status: | new → closed |
Note:
See TracTickets
for help on using tickets.



http://samples.ffmpeg.org/ffmpeg-bugs/trac/ticket4725/