avformat/utils: Fix regression with H264 stream probing

Fixes Ticket4725

Signed-off-by: Michael Niedermayer <michael@niedermayer.cc>